force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/Dienstgebied_Postcode_Associatie__c.object-meta.xml
<CustomObject>
    <label>Dienst Postcode Associatie</label>
    <nameField>
        <displayFormat>DPA-{0000}</displayFormat>
        <label>Naam van Dienst Postcode Associatie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dienst Postcode Associaties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>