force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Dienstgebied__c.field-meta.xml
<CustomField>
    <fullName>Dienstgebied__c</fullName>
    <label>Dienst</label>
    <referenceTo>Dienstgebied__c</referenceTo>
    <relationshipLabel>Dienst Postcode Associaties</relationshipLabel>
    <relationshipName>Dienstgebied_Postcode_Associaties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>