force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Dienstgebied_Postcode_Associaties</relationshipName>
    <type>Lookup</type>
</CustomField>