force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Postcode_begin__c.field-meta.xml
<CustomField>
    <fullName>Postcode_begin__c</fullName>
    <formula>Postcode_Gebied__r.Postcode_Begin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode begin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>