force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Postcode_einde__c.field-meta.xml
<CustomField>
    <fullName>Postcode_einde__c</fullName>
    <formula>Postcode_Gebied__r.Postcode_Einde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode einde</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>