force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Postcode_Gebied__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Gebied__c</fullName>
    <label>Postcode Gebied</label>
    <referenceTo>Postcode_Range__c</referenceTo>
    <relationshipName>Dienstgebied_Postcode_Associaties</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>