force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Regiotoeslag__c.field-meta.xml
<CustomField>
    <fullName>Regiotoeslag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regiotoeslag?</label>
    <type>Checkbox</type>
</CustomField>