force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Used to find correct Dienstgebied Postcode Associatie</description>
    <formula>TEXT(Dienstgebied__r.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>