force-app/main/default/objects/Dienstgebied_Postcode_Associatie__c/fields/Toeslag__c.field-meta.xml
<CustomField>
    <fullName>Toeslag__c</fullName>
    <description>% percentage that will be added to pricing</description>
    <label>Toeslag %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>